2002-10-04  Mark McLoughlin  <mark@skynet.ie>

	* modules/vfolder/vfolder-common.h: turn on VFOLDER_DEBUG
	for debugging spew and VFOLDER_DEBUG_WITHOUT_MONITORING
	for testing non-FAM monitoring code.

	* modules/vfolder/vfolder-common.c:
	* modules/vfolder/vfolder-info.c: only spew debugging info
	if VFOLDER_DEBUG.

	* modules/vfolder/vfolder-util.c: (monitor_callback_internal):
	Use non-FAM monitoring code if VFOLDER_DEBUG_WITHOUT_MONITORING
	is defined.

2002-10-07  Seth Nickell  <snickell@stanford.edu>

	* modules/vfolder/applications-all-users.vfolder-info.in:

	Don't hardcode displaying evolution and galeon into the
	top-level menu.
	
2002-10-01  Yanko Kaneti <yaneti@declera.com>

	* schemas/system_http_proxy.schemas: reorder some elements so that it 
	validates.

2002-09-30  Christophe Fergeau  <teuf@users.sourceforge.net>
        * modules/ssh-method.c: 
        Quote filenames using g_shell_quote before passing them to ssh

2002-09-30  Christophe Fergeau  <teuf@users.sourceforge.net>
        * modules/ssh-method.c: 
        Make do_read return GNOME_VFS_ERROR_EOF when it read 0 byte
        Force C locale in ssh_connect before running ssh (the ls parsing 
        function expects ls output to be in this locale)
        When the uri contains no username, use the name of the current user
        (otherwise ssh://localhost won't work).
        Fix a possible buffer overflow in do_read_directory

2002-09-30  Christophe Fergeau  <teuf@users.sourceforge.net>
 	* modules/ftp-method.c: 
 	Moved ftp authentification to a separate function (ftp_login)
 	Correctly return GNOME_VFS_ERROR_EOF when do_read didn't read anything

2002-09-27  Arvind Samptur <arvind.samptur@wipro.com>
	* modules/Makefile.am : look for cde menus only if cde is present.
	* cdemenu-module.conf : added the new file.
	* default-modules.conf : remove cdemenu from defaults.
	Fixes #86736. Patch from Stephen Browne.

2002-09-20  Arvind Samptur <arvind.samptur@wipro.com>