@@ -1,3 +1,9 @@
+2002-10-12  Seth Nickell  <snickell@stanford.edu>
+
+	* modules/vfolder/applications.vfolder-info-default.in:
+
+	Disable favorites folder... Everything is favorites now.
+	
 2002-10-04  Mark McLoughlin  <mark@skynet.ie>
 
 	* modules/vfolder/vfolder-common.h: turn on VFOLDER_DEBUG
